Fix overlaping footer

--- a/assets/about/about-res.css
+++ b/assets/about/about-res.css
@@ -96,10 +96,6 @@ media-querys table
     height: 70vh;
   }
 
-  .past-events {
-    height: 105vh;
-  }
-
   .event-subtitle {
     width: 80%;
     text-align: center;
