--- a/assets/about/about.css
+++ b/assets/about/about.css
@@ -201,8 +201,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   padding: 40px 0;
+  height: auto;
 }
 
 .events-title {
